Closed Bug 947557 Opened 12 years ago Closed 11 years ago

ASSERTION: DidReflow() was never called with prescripted mmultiscripts as an embellished operator

Categories

(Core :: MathML, defect, P4)

x86_64
Windows 8.1
defect

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: jkitch, Assigned: jkitch)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Attached file testcase.html
User Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 (Beta/Release) Build ID: 20131125215016 Steps to reproduce: Load the attached testcase in a debug build, (in my case it was an unpatched locally compiled one) Actual results: ASSERTION: DidReflow() was never called: '!(childFrame->GetStateBits() & NS_FRAME_IN_REFLOW)', file layout\mathml\nsMathMLContainerFrame.cpp, line 523 (6 times) Expected results: There should be no assertion.
(To be more specific, it was a Nightly build based on yesterday's mozilla-central).
Keywords: assertion, testcase
Priority: -- → P4
Attached patch patchSplinter Review
The issue is that the children of embellished operators are checked in debug code to ensure that DidReflow was called, yet we never actually called it for <prescripts/> frames. (The crashtest seemed the most appropriate place to check for assertions. It shouldn't cause any crashes).
Assignee: nobody → jkitch.bug
Status: NEW → ASSIGNED
Attachment #8399905 - Flags: review?(fred.wang)
Blocks: 877563
Summary: ASSERTION: DidReflow() was never called with nested prescripted mmultiscripts → ASSERTION: DidReflow() was never called with prescripted mmultiscripts as an embellished operator
Attachment #8399905 - Flags: review?(fred.wang) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: