Bug 947557 - Call DidReflow() on <mprescripts/> frame. r=fredw